--- a/root/css/addconsultant.css
+++ b/root/css/addconsultant.css
@@ -5,32 +5,30 @@ body{
   font-family: 'Lato';
 }
 .navbar{
-  background-color: white;
+  background-color: black;
+  height: 90px;
 }
 .navbar-brand{
-/*  font-family: 'Pacifico';*/
 font-family: 'Ubuntu';
   font-size: 35px;
   color:lightcoral !important;
 }
 .nav-link{
-  font-size:16px;
-  margin:15px;
-  color:black !important;
+  font-size:20px;
+  margin-right: 40px;
+  float: right;
+  color:white !important;
   font-family: 'Roboto condense';
 }
 .nav-link:hover{
-  color:#00E8E8 !important;
+  color:green !important ;/*#00E8E8 !important;*/
 }
 .active .nav-link{
-  color:blue !important;
+  color:Green !important;/*#00E8E8 !important;*/
 }
-.menu-right-btn{
-  padding: 13px 46px;
-  margin-right: 1%;
-  font-size: 20px;
-  background-color: transparent;
-  transition: all 300ms ease-in;
+.emp{
+  color:gray;
+  font-size: 40px;
 }
 .dropdown:hover>.dropdown-menu{
   display:block;
@@ -115,7 +113,7 @@ label{
   width:800px;
   height:100%;
   margin:auto;
-  background-color: rgb(0,0,0,0.4);
+  background-color:gray;/* rgb(0,0,0,0.4);*/
   padding: 10px;
 }
 #reg{
