--- a/root/css/aboutus.css
+++ b/root/css/aboutus.css
@@ -1,43 +1,31 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato&family=Pacifico&family=Righteous&family=Roboto&family=Ubuntu&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,700,800,900&display=swap');
 body{
   padding: 0%;
   margin:0%;
   font-family: 'Lato';
 }
 .navbar{
-  background-color: white;
+  background-color: black;
+  height: 90px;
 }
 .navbar-brand{
-/*  font-family: 'Pacifico';*/
 font-family: 'Ubuntu';
   font-size: 35px;
   color:lightcoral !important;
 }
 .nav-link{
-  font-size:16px;
-  margin:15px;
-  color:black !important;
+  font-size:20px;
+  margin-right: 40px;
+  float: right;
+  color:white !important;
   font-family: 'Roboto condense';
 }
 .nav-link:hover{
-  color:#00E8E8 !important;
+  color:green !important ;/*#00E8E8 !important;*/
 }
 .active .nav-link{
-  color:blue !important;
-}
-.menu-right-btn{
-  padding: 13px 46px;
-  margin-right: 1%;
-  font-size: 20px;
-  background-color: transparent;
-  transition: all 300ms ease-in;
-}
-.dropdown:hover>.dropdown-menu{
-  display:block;
-}
-.menu-right-btn:hover{
-  color:white;
-  background-color:#4CBB17;/* #00E8E8;*/
+  color:Green !important;/*#00E8E8 !important;*/
 }
 .text{
   text-decoration: none;
@@ -61,6 +49,10 @@ font-family: 'Ubuntu';
 }
 .flex-column{
   color:black;
+}
+.emp{
+  color:gray;
+  font-size: 40px;
 }
 /*section1*/
 .section-1 .heading-1{
