--- a/root/css/contactus.css
+++ b/root/css/contactus.css
@@ -5,41 +5,31 @@ body{
   font-family: 'Lato';
 }
 .navbar{
-  background-color: white;
+  background-color: black;
+  height: 90px;
 }
 .navbar-brand{
-/*  font-family: 'Pacifico';*/
 font-family: 'Ubuntu';
   font-size: 35px;
   color:lightcoral !important;
 }
 .nav-link{
-  font-size:16px;
-  margin:15px;
-  color:black !important;
+  font-size:20px;
+  margin-right: 40px;
+  float: right;
+  color:white !important;
   font-family: 'Roboto condense';
 }
 .nav-link:hover{
-  color:#00E8E8 !important;
+  color:green !important ;/*#00E8E8 !important;*/
 }
 .active .nav-link{
-  color:blue !important;
+  color:Green !important;/*#00E8E8 !important;*/
 }
-.menu-right-btn{
-  padding: 13px 46px;
-  margin-right: 1%;
-  font-size: 20px;
-  background-color: transparent;
-  transition: all 300ms ease-in;
+.emp{
+  color:gray;
+  font-size: 40px;
 }
-.dropdown:hover>.dropdown-menu{
-  display:block;
-}
-.menu-right-btn:hover{
-  color:white;
-  background-color:#4CBB17;/* #00E8E8;*/
-}
-
 /*section1*/
 .section-1 .heading-1{
   margin-top: 4%;
