--- a/root/css/styles.css
+++ b/root/css/styles.css
@@ -6,7 +6,8 @@ body{
   font-family: 'Lato';
 }
 .navbar{
-  background-color: white;
+  background-color: black;
+  height: 90px;
 }
 .navbar-brand{
 font-family: 'Ubuntu';
@@ -15,16 +16,16 @@ font-family: 'Ubuntu';
 }
 .nav-link{
   font-size:20px;
-  margin-left: 50px;
-
-  color:black !important;
+  margin-right: 40px;
+  float: right;
+  color:white !important;
   font-family: 'Roboto condense';
 }
 .nav-link:hover{
   color:green !important ;/*#00E8E8 !important;*/
 }
 .active .nav-link{
-  color:blue !important;/*#00E8E8 !important;*/
+  color:Green !important;/*#00E8E8 !important;*/
 }
 .menu-right-btn{
   padding: 13px 46px;
@@ -33,6 +34,198 @@ font-family: 'Ubuntu';
   background-color: transparent;
   transition: all 300ms ease-in;
 }
+.text{
+  text-decoration: none;
+  color:red;
+}
+.site-content{
+ /*background-image: url("../images/sebastian-herrmann-O2o1hzDA7iE-unsplash.jpg");*/
+  background: linear-gradient(to left,rgba(28,112,196,.2),white),url(../images/sebastian-herrmann-O2o1hzDA7iE-unsplash.jpg);
+  text-shadow:none;
+ /*background-attachment: fixed;*/
+/* background: rgba(28,112,196,.2)rgba(2,0,0,0.5)*/
+  height:800px;
+  background-size: cover;
+}
+.flex-column{
+  margin-left: 40px;
+}
+.site-title, .site-desc{
+  font-family: 'Righteous';
+ color:steelblue;
+}
+.site-title{
+  margin-top: 14%;
+  margin-left: 2px;
+
+  font-size: 50px;
+  color:midnightblue;/*#4CBB17;*/
+}
+.site-desc{
+    font-size: 40px;
+}
+
+.flex-column{
+  color:black;
+}
+/*searchbar*/
+.wrapper{
+  position: absolute;
+  top: 110%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+}
+
+.wrapper .search_box{
+  width: 900px;
+  background: #fff;
+  border-radius: 5px;
+  height: 65px;
+  display: flex;
+  padding: 10px;
+  box-shadow: 0 8px 6px -10px #b3c6ff;
+}
+
+.wrapper .search_box .dropdown{
+  width: 190px;
+  border-right: 2px solid #dde2f1;
+  color: #9fa3b1;
+  position: relative;
+  cursor: pointer;
+}
+
+.wrapper .search_box .dropdown .default_option{
+  text-transform: uppercase;
+  padding: 13px 15px;
+  font-size: 14px;
+}
+
+.wrapper .search_box .dropdown ul{
+  position: absolute;
+  top: 70px;
+  left: -10px;
+  background: #fff;
+  width: 150px;
+  border-radius: 5px;
+  padding: 20px;
+  display: none;
+  box-shadow: 8px 8px 6px -10px #b3c6ff;
+}
+
+.wrapper .search_box .dropdown ul.active{
+  display: block;
+}
+
+.wrapper .search_box .dropdown ul li{
+  padding-bottom: 20px;
+}
+
+.wrapper .search_box .dropdown ul li:last-child{
+  padding-bottom: 0;
+}
+
+.wrapper .search_box .dropdown ul li:hover{
+  color: #6f768d;
+}
+
+.wrapper .search_box .dropdown:before{
+  content: "";
+  position: absolute;
+  top: 18px;
+  right: 20px;
+  border: 8px solid;
+  border-color: orange transparent transparent transparent;
+}
+
+.wrapper .search_box .dropdown1{
+  width: 190px;
+  border-right: 2px solid #dde2f1;
+  color: #9fa3b1;
+  position: relative;
+  cursor: pointer;
+}
+
+.wrapper .search_box .dropdown1 .default_option1{
+  text-transform: uppercase;
+  padding: 13px 15px;
+  font-size: 14px;
+}
+
+.wrapper .search_box .dropdown1 ul{
+  position: absolute;
+  top: 70px;
+  left: -10px;
+  background: #fff;
+  width: 150px;
+  border-radius: 5px;
+  padding: 20px;
+  display: none;
+  box-shadow: 8px 8px 6px -10px #b3c6ff;
+}
+
+.wrapper .search_box .dropdown1 ul.active{
+  display: block;
+}
+
+.wrapper .search_box .dropdown1 ul li{
+  padding-bottom: 20px;
+}
+
+.wrapper .search_box .dropdown1 ul li:last-child{
+  padding-bottom: 0;
+}
+
+.wrapper .search_box .dropdown1 ul li:hover{
+  color: #6f768d;
+}
+
+.wrapper .search_box .dropdown1:before{
+  content: "";
+  position: absolute;
+  top: 18px;
+  right: 20px;
+  border: 8px solid;
+  border-color:orange transparent transparent transparent;/*#5078ef*/
+}
+
+.wrapper .search_box .search_field{
+  width: 490px;
+  height: 100%;
+  position: relative;
+}
+
+.wrapper .search_box .search_field .input{
+  width: 100%;
+  height: 100%;
+  border: 0px;
+  font-size: 16px;
+  padding-left: 20px;
+  padding-right: 38px;
+  color: #6f768d;
+}
+
+.wrapper .search_box .search_field .search{
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  font-size: 22px;
+  color:orange;/* #5078ef;*/
+  cursor: pointer;
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: #9fa3b1;
+}
+::-moz-placeholder { /* Firefox 19+ */
+ color: #9fa3b1;
+}
+:-ms-input-placeholder { /* IE 10+ */
+  color: #9fa3b1;
+}
+
+
+
+/*--*/
 .dropdown:hover>.dropdown-menu{
   display:block;
 }
@@ -98,12 +291,15 @@ font-family: 'Ubuntu';
 .navbar-light .navbar-nav .nav-link:focus, .navbar-light .navbar-nav .nav-link:hover {
 	color: #fff;
 }
-
+.emp{
+  font-size:40px;
+  color: gray;
+}
 
 
 
 /*section1*/
-.icon{
+/*.icon{//changed section
   font-size: 140px;
   color: gray;
   margin-bottom: 10px;
@@ -135,10 +331,158 @@ font-family: 'Ubuntu';
 .card-body a{
   text-decoration: none;
     color: rgba(0, 0, 0, 0.59);
+
+    width: 150px;
+    text-decoration: none;
+    display: inline-block;
+    margin: 0 10px;
+    padding: 12px 0;
+    color: #fff;
+    border: .5px solid #fff;
+    position: relative;
+    z-index: 1;
+    transition: color 0.5s;
 }
+.card-body a span{
+  width: 0;
+  height: 100%;
+  position: absolute;
+  top:0;
+  left: 0;
+  background: #fff;
+  z-index:-1;
+  transition: 0.5s;
+}
+.card-body a:hover span{
+  width: 100%;
+}
+.card-body a:hover{
+  color: #000;
+}
+
+
+
+
 .card-text:hover{
   color:#4cbb17;
+}*/
+.title-text{
+  text-align: center;
+  padding-bottom: 70px;
 }
+/*.title-text p{
+  margin: auto;
+  font-size: 20px;
+  color: #009688;
+  font-weight: bold;
+  position: relative;
+  z-index:1;
+  display: inline-block;
+}
+.title-text p::after{
+  content: '';
+  width: 50px;
+  height: 35px;
+  background: linear-gradient(#019587,#fff);
+  position: absolute;
+  top:-20px;
+  left: 0;
+  z-index: -1;
+  transform: rotate(10deg);
+  border-top-left-radius: 35px;
+  border-bottom-right-radius: 35px;
+}*/
+.title-text h1{
+  font-size: 50px;
+    margin-top: 8%;
+    margin-bottom: 70px;
+  font-family: 'Ubuntu';
+  }
+}
+#service{
+  width: 100%;
+  padding: 76px 0;
+  background: #efefef;
+}
+.service-box{
+  width: 80%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin: auto;
+}
+.single-service{
+  flex-basis: 45%;
+  text-align: center;
+  border-radius: 7px;
+  margin-bottom: 20px;
+  color: #fff;
+  position: relative;
+}
+.single-service img{
+  width: 100%;
+  border-radius: 7px;
+
+}
+.single-service a{
+  color: white;
+}
+.overlay{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top:0;
+  border-radius: 7px;
+  cursor: pointer;
+  background: linear-gradient(rgba(0,0,0,0.5),lightblue);/*#009688);*/
+  opacity: 0;
+  transition: 1s;
+}
+.single-service:hover .overlay{
+  opacity: 1;
+}
+.service-desc{
+  width: 80%;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  opacity: 0;
+  transform: translatex(-50%);
+  transition: 1s;
+}
+hr{
+  background: #fff;
+  height: 2px;
+  border:0;
+  margin: 15px auto;
+  width: 60%;
+}
+.service-desc p{
+  font-size: 14px;
+}
+.single-service:hover .service-desc{
+  bottom: 40%;
+  opacity: 1;
+}
+@media screen and (max-width:770px){
+  .single-service{
+    flex-basis: 100%;
+    margin-bottom: 30px;
+  }
+  .service-desc p{
+    font-size: 12px;
+  }
+  hr{
+    margin: 5px auto;
+  }
+  .single-service:hover .service-desc{
+    bottom: 25% !important;
+  }
+}
+
+
+
+
 /*section-2*/
 
 .section-2 .container-fluid{
