--- a/root/css/trainingreg.css
+++ b/root/css/trainingreg.css
@@ -5,69 +5,217 @@ body{
   font-family: 'Lato';
 }
 .navbar{
-  background-color: white;
+  background-color: black;
+  height: 90px;
 }
 .navbar-brand{
-/*  font-family: 'Pacifico';*/
 font-family: 'Ubuntu';
   font-size: 35px;
   color:lightcoral !important;
 }
 .nav-link{
-  font-size:16px;
-  margin:15px;
-  color:black !important;
+  font-size:20px;
+  margin-right: 40px;
+  float: right;
+  color:white !important;
   font-family: 'Roboto condense';
 }
 .nav-link:hover{
-  color:#00E8E8 !important;
+  color:green !important ;/*#00E8E8 !important;*/
 }
 .active .nav-link{
-  color:blue !important;
+  color:Green !important;/*#00E8E8 !important;*/
 }
-.menu-right-btn{
-  padding: 13px 46px;
-  margin-right: 1%;
-  font-size: 20px;
-  background-color: transparent;
-  transition: all 300ms ease-in;
-}
-.dropdown:hover>.dropdown-menu{
-  display:block;
-}
-.menu-right-btn:hover{
-  color:white;
-  background-color:#4CBB17;/* #00E8E8;*/
-}
-.text{
-  text-decoration: none;
-  color:red;
-}
-.site-content{
-  background-image: url("../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg");
-  background-attachment: fixed;
-  height:800px;
-  background-size: cover;
-}
-.site-title, .site-desc{
-  font-family: 'Righteous';
- color:black;
-}
-.site-title{
-  margin-top: 30%;
-  margin-bottom: 6%;
-  font-size: 50px;
-  color:#4CBB17;
-}
-.site-desc{
-  font-size: 14px;
-
+.emp{
+  color:gray;
   font-size: 40px;
 }
 
-.flex-column{
-  color:black;
+/*section*/
+#tform{
+	background:url("../images/jeshoots-com-pUAM5hPaCRI-unsplash.jpg") no-repeat center fixed;
+    background-size: cover;
+    background-size: 1900px;
+	align-items: center;
+	justify-content: center;
+	min-height: 100vh;
+	display: flex;
+	font-family: sans-serif;
+	font-style: italic;
+
+  position:relative;
+
+  padding:150px 100px 100px;
+  font-family: "georgian",sans-serif;
+
+  width: 100%;
 }
+.container{
+	width: 80%;
+	padding: 20px;
+}
+.container h2{
+	width: 100%;
+	color:#130f40;
+	font-size: 36px;
+	text-align: center;
+	margin-bottom: 15px;
+}
+.container .row100{
+	position: relative;
+	width: 100%;
+	display: grid;
+	grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
+}
+.container .row100 .col{
+	position: relative;
+	width: 100%;
+	padding: 0 30px;
+	margin: 30px 0 10px;
+	transition: 0.5s;
+}
+.container .row100 .inputBox{
+	position: relative;
+	width: 100%;
+	height: 40px;
+	color: #130f40;
+}
+.container .row100 .inputBox input,
+.container .row100 .inputBox.textarea textarea
+{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	background: transparent;
+	box-shadow: none;
+	border:none;
+	outline: none;
+	font-size: 18px;
+	padding: 0 10px;
+	z-index:1;
+	color:#000;
+}
+.row100 .col .inputBox input:focus {
+	outline: 0;
+	border-color: #777;
+}
+
+
+.container .row100 .inputBox .line
+{
+	position: absolute;
+	bottom: 0;
+	display: block;
+	width: 100%;
+	height: 2px;
+	background:darkkhaki;
+	transition: 0.5s;
+	border-radius: 2px;
+	pointer-events: none;
+}
+.container .row100 .col #bt
+{
+	margin: 45px 0 30px 380px;
+	height:55px;
+	width: 205px;
+	font-size: 20px;
+	color:white;
+	outline:none;
+	cursor: pointer;
+	font-weight: bold;
+	background:#999900;
+	border-radius: 30px;
+	border:1px solid #CCCC00;
+	transition: .5s;
+}
+.container .row100 .col #bt:hover{
+	background:#9ACD32;
+}
+/*#usernamef{
+	font-size: 140px;
+	}*/
+.container .row100 .inputBox input:focus ~ .line,
+.container .row100 .inputBox input:valid ~ .line
+{
+	height: 100%;
+}
+.container .row100 .inputBox.textarea{
+	position: relative;
+	width: 100%;
+	height: 100px;
+	padding: 10px 0;
+}
+ .container .row100 .inputBox.textarea textarea
+{
+	height: 100%;
+	resize: none;
+}
+.container .row100 .inputBox textarea:focus + .text,
+.container .row100 .inputBox textarea:valid + .text
+{
+    top:-35px;
+    left:-10px;
+}
+.container .row100 .inputBox textarea:focus ~ .line,
+.container .row100 .inputBox textarea:valid ~ .line
+{
+	height: 100%;
+}
+input[type="submit"]
+{
+	border:none;
+	padding: 7px 35px;
+	cursor: pointer;
+	outline:none;
+	background: #FF9933;
+	color:#000;
+	font-size: 18px;
+	border-radius: 2px;
+}
+/*#emailids{
+	margin-top: 1px;
+	width: 340px;
+	height:30px;
+	font-size: 16px;
+	color:#C62828;
+	text-align:bottom;
+	padding:50px 25px 1px 4px;
+	display:none;
+}*/
+
+.login_form .row100 .col .inputBox #fname_error,
+.login_form .row100 .col .inputBox #lname_error,
+.login_form .row100 .col .inputBox #email_error,
+.login_form .row100 .col .inputBox #contact_error,
+.login_form .row100 .col .inputBox #technology_error,
+.login_form .row100 .col .inputBox #experience_error,
+.login_form .row100 .col .inputBox #password_error,
+.login_form .row100 .col .inputBox #confirmpassword_error{
+
+	margin-top: 1px;
+	width: 340px;
+	height:30px;
+	font-size: 16px;
+	color:#C62828;
+	text-align:bottom;
+	padding:50px 25px 1px 4px;
+	display:none;
+}
+.login_form .row100 .col .inputBox #description_error{
+   margin-top: 1px;
+	width: 340px;
+	height:30px;
+	font-size: 16px;
+	color:#C62828;
+  text-align:bottom;
+	padding:100px 25px 1px 4px;
+  display: none;
+}
+
+
+
+
+
 
 /*footer*/
 .main {
