--- a/root/css/aboutus.css
+++ b/root/css/aboutus.css
@@ -10,7 +10,6 @@ body{
   height: 90px;
 }
 .navbar-brand{
-font-family: 'Ubuntu';
   font-size: 35px;
   color:lightcoral !important;
 }
@@ -32,12 +31,13 @@ font-family: 'Ubuntu';
   color:red;
 }
 .site-content{
-  height:300px;
+  height:700px;
   background-size: cover;
-  background-color: green;
+  background-image: url("../images/headway-5QgIuuBxKwM-unsplash.jpg");
+ /*background-attachment: fixed;*/
 }
 .site-title, .site-desc{
-  font-family: 'Righteous';
+/*  font-family: 'Righteous';*/
  color:black;
 }
 .site-title{
@@ -53,6 +53,43 @@ font-family: 'Ubuntu';
 .emp{
   color:gray;
   font-size: 40px;
+}
+/*section*/
+.section-2 .heading-1{
+  margin-top: 2%;
+  margin-bottom: 3%;
+  font-family: 'Ubuntu';
+  width: 80%;
+  color:#E32B47;
+  margin-left: 10%;
+}
+.section-2 .para{
+  width: 80%;
+  font-family: 'Ubuntu';
+  color: whitesmoke;
+  margin-bottom: 2%;
+  font-size: 18px;
+  margin-left:10%;
+}
+.section-2 .btn{
+  margin-bottom: 5%;
+  margin-top: 3%;
+  margin-left: 60px;
+  font-size: 20px;
+  width:22%;
+  border-radius: 50px;
+   color: white;
+  padding: 2% 5%;
+}
+.anchor{
+  color: green;
+}
+.anchor:hover{
+  text-decoration: none;
+  color: red;
+}
+.section-2 h4{
+  margin-left: 40px;
 }
 /*section1*/
 .section-1 .heading-1{
@@ -84,19 +121,111 @@ font-family: 'Ubuntu';
 .img-wrap img{
   width:100%;
   padding: 10px;
-  border-radius: 50%;
-  box-shadow: 0 0 10px #999999;
+  height: 100%;
+  margin-top: 6%;
+  /*border-radius: 50%;
+  box-shadow: 0 0 10px #999999;*/
+}
+p{
+  font-family: 'Ubuntu';
+  margin-bottom: 2%;
+  font-size: 18px;
 }
 #aboutus h1{
   margin-bottom: 25px;
 }
 .founder{
-  margin-top: 100px;
+  margin-top: 30px;
   margin-bottom: 80px;
 }
 .heading{
   margin-bottom: 40px;
 }
+/*--*/
+#features{
+  width: 100%;
+  padding: 10px 0;
+}
+.title-text{
+  text-align: center;
+  padding-bottom: 50px;
+}
+.title-text p{
+  margin: auto;
+  font-size: 20px;
+  color: #009688;
+  font-weight: bold;
+  position: relative;
+  z-index:1;
+  display: inline-block;
+}
+.title-text p::after{
+  content: '';
+  width: 50px;
+  height: 35px;
+  background: linear-gradient(#019587,#fff);
+  position: absolute;
+  top:-20px;
+  left:0;
+  z-index: -1;
+  transform: rotate(10deg);
+  border-top-left-radius: 35px;
+  border-bottom-right-radius: 35px;
+}
+.title-text h1{
+  font-size: 50px;
+}
+.features-box{
+  width: 80%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  text-align: center;
+}
+.features{
+  flex-basis:50%;
+}
+.features-img{
+  flex-basis: 50%;
+  margin: auto;
+}
+.features-img img{
+  width:70%;
+  border-radius: 10px;
+}
+.features h1{
+  text-align: left;
+  margin-bottom: 10px;
+  font-weight: 100;
+  color: #009688;
+}
+.features-desc{
+  display: flex;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.features-text p{
+  padding: 20px;
+  text-align: initial;
+}
+@media screen and (max-width:770px){
+  .title-text h1{
+    font-size: 35px;
+  }
+  .features{
+    flex-basis:100%;
+  }
+  .features-img{
+    flex-basis: 100%;
+  }
+  .features-img img{
+    width:100%;
+
+  }
+}
+
 /*section3*/
 .team{
   margin: 75px 0;
