--- a/root/css/staffing.css
+++ b/root/css/staffing.css
@@ -31,8 +31,8 @@ font-family: 'Ubuntu';
   font-size: 40px;
 }
 .site-content{
-  /*background-image: url("../images/sebastian-herrmann-O2o1hzDA7iE-unsplash.jpg");*/
-  /*background-attachment: fixed;*/
+  background-image: url("../images/pexels-rebrand-cities-1367271.jpg");
+  background-attachment: fixed;
   height:600px;
   background-size: cover;
   background-color: SALMON;
