--- a/root/css/training.css
+++ b/root/css/training.css
@@ -31,8 +31,8 @@ font-family: 'Ubuntu';
   font-size: 40px;
 }
 .site-content{
-  /*background-image: url("../images/pexels-christina-morillo-1181344.jpg");*/
-  background-color: green;
+  background-image: url("../images/pexels-oleg-magni-2058130.jpg");
+
  background-attachment: fixed;
   height:500px;
   background-size: cover;
